--- a/prob2_2025/cdistrib1.html
+++ b/prob2_2025/cdistrib1.html
@@ -405,7 +405,7 @@ name="$Unif(0,1)$ to any distribution">$Unif(0,1)$ to any distribution</a></h1>
 Of a great importance is the special case $Unif(0,1).$  It plays a crucial role in the proof of the fundamentanl theorem
  of probability as well as random number generation using a computer.
 <p></p>
- To prepare for the theorem we define a right-inverse of any CDF. 
+ To prepare for the theorem we define a sort of inverse of any CDF. 
 <p></p>
 
 <fieldset>
@@ -422,7 +422,7 @@ Here are some properties of $F^-$:
 Let $F$  be any CDF. Then 
 <ol type="">
 
-<li>  $\forall x\in(0,1)~~F(F^-(x))=x.$ 
+<li>  $\forall x\in(0,1)~~x\leq F(F^-(x)).$ 
 </li>
 
 <li>
@@ -444,7 +444,7 @@ $\forall x\in{\mathbb R}, y\in(0,1)~~(F^-(y)\leq x \Leftrightarrow y \leq F(x)).
 <li>
 Take any $x\in{\mathbb R}$  and $y\in (0,1)$  such that $F^-(y)\leq x.$  Since
  $F$  is non-decreasing, hence
- $F(F^-(y))\leq F(x)$, <i>i.e.</i>, $y\leq F(x)$, since $F(F^-(y))=y.$  
+ $F(F^-(y))\leq F(x)$, <i>i.e.</i>, $y\leq F(x)$, since $y\leq F(F^-(y)).$  
 <p></p>
 Conversely, take any $x\in{\mathbb R}$  and $y\in (0,1)$  such that $y\leq F(x).$ 
 <p></p>
