--- a/prob2_2025/cdistrib1.html
+++ b/prob2_2025/cdistrib1.html
@@ -402,7 +402,20 @@ name="Problem set 2">Problem set 2</a></h2>
 name="$Unif(0,1)$ to any distribution">$Unif(0,1)$ to any distribution</a></h1>
 <a href="https://youtu.be/u3jd8k-WJjw">Video for this section</a>
 <p></p>
-Of a great importance is the special case $Unif(0,1).$  It plays a crucial role in the proof of the fundamentanl theorem
+
+<p></p>
+
+<img src="image/alert.png">Please note that the video contains a mistake (and so does not match the text below, which has been corrected). In
+ the video I have wrongly stated $F(F^-(y))=y$, while actually we should have $F(F^-(y))\geq y$, as we have given
+in the theorem below. I shall correct the video soon.
+<p></p>
+We have seen how we can arrive at the  $Unif(0,1)$ from any <i>continuous</i>  distribution.
+ Here we shall see its converse which is even stronger: Given $X\sim Unif(0,1)$  we can
+ manufacture a random variable $Y$  with <i>any</i>  given distribution (not necessairily continuous)!
+<p></p>
+This result plays a
+ crucial role in the proof of
+ the fundamental theorem
  of probability as well as random number generation using a computer.
 <p></p>
  To prepare for the theorem we define a sort of inverse of any CDF. 
@@ -422,7 +435,7 @@ Here are some properties of $F^-$:
 Let $F$  be any CDF. Then 
 <ol type="">
 
-<li>  $\forall x\in(0,1)~~x\leq F(F^-(x)).$ 
+<li>  $\forall y\in(0,1)~~y\leq F(F^-(y)).$ 
 </li>
 
 <li>
@@ -442,9 +455,13 @@ $\forall x\in{\mathbb R}, y\in(0,1)~~(F^-(y)\leq x \Leftrightarrow y \leq F(x)).
 </li>
 
 <li>
-Take any $x\in{\mathbb R}$  and $y\in (0,1)$  such that $F^-(y)\leq x.$  Since
+Take any $x\in{\mathbb R}$  and $y\in (0,1)$  such that $F^-(y)\leq x.$  
+<p></p>
+Since
  $F$  is non-decreasing, hence
- $F(F^-(y))\leq F(x)$, <i>i.e.</i>, $y\leq F(x)$, since $y\leq F(F^-(y)).$  
+ $F(F^-(y))\leq F(x)$.
+<p></p>
+Hence $y\leq F(x)$, since $y\leq F(F^-(y))$  by part 1.
 <p></p>
 Conversely, take any $x\in{\mathbb R}$  and $y\in (0,1)$  such that $y\leq F(x).$ 
 <p></p>
@@ -471,20 +488,6 @@ completing the proof.
 This shows that if we can show the existence of (or generate random numbers from)  $Unif(0,1)$, then we can do so for
  any CDF.
 <p></p>
-It has a partial converse, which is also important.
-<fieldset>
-<legend><b><i>Theorem</i></b></legend>
-If $X$  is a continuous random variable with CDF $F,$  then $F(X)\sim Unif(0,1).$
-</fieldset>
-
-<p>
-<b><i>Proof:</i></b>
-Clearly, $Y=F(X)$  can only take values in $[0,1].$  So $P(Y\leq y) = 0$  if
- $y&lt;0$  or if $y&gt;1.$  
-<p></p>
-Take any $y\in[0,1].$  Then $P(Y\leq y) = P(F(X)\leq y)= P(X\leq F^-(y))= F(F^-(y))=y.$ 
-<b><i>[QED]</i></b>
-</p>
 
 <h2><a
 name="Problem set 3">Problem set 3</a></h2>
