--- a/prob2_2025/cantor.html
+++ b/prob2_2025/cantor.html
@@ -271,7 +271,8 @@ Here the graphs of $F_0, F_1$  and $F_2$:
 </table>
 </center>
 
-It is not hard to write down algebraic formulae for $F_n.$  But it is preferable to think in terms of graphs to appreciate
+It is possible to write down an algebraic formula for $F_n.$  But it is preferable to think
+ in terms of graphs to appreciate
  the following discussion.
 <h2><a
 name="Convergence of $F_n$">Convergence of $F_n$</a></h2>
@@ -299,7 +300,7 @@ To move from one $F_n$  to the next we are leaving horizontal parts unchanged an
 </tr>
 </table>
 </center>
-To formally prove uniform convergence of $(F_n)$  we shall employ te uniform Cauchy criterion, <i>i.e.</i>, we shall show that
+To formally prove uniform convergence of $(F_n)$  we shall employ the uniform Cauchy criterion, <i>i.e.</i>, we shall show that
 <p></p>
 
 <div class="box">Target</div>$\forall \epsilon&gt;0~~\exists N\in{\mathbb N}~~ \forall m,n\geq N~~ \forall x\in{\mathbb R}~~|F_m(x)-F_n(x)| &lt; \epsilon.$
