--- a/prob2_2025/cdistrib1.html
+++ b/prob2_2025/cdistrib1.html
@@ -400,14 +400,9 @@ name="Problem set 2">Problem set 2</a></h2>
 
 <h1><a
 name="$Unif(0,1)$ to any distribution">$Unif(0,1)$ to any distribution</a></h1>
-<a href="https://youtu.be/u3jd8k-WJjw">Video for this section</a>
+<a href="https://youtu.be/W80bkQQyEYA">Video for this section</a>
 <p></p>
 
-<p></p>
-
-<img src="image/alert.png">Please note that the video contains a mistake (and so does not match the text below, which has been corrected). In
- the video I have wrongly stated $F(F^-(y))=y$, while actually we should have $F(F^-(y))\geq y$, as we have given
-in the theorem below. I shall correct the video soon.
 <p></p>
 We have seen how we can arrive at the  $Unif(0,1)$ from any <i>continuous</i>  distribution.
  Here we shall see its converse which is even stronger: Given $X\sim Unif(0,1)$  we can
