--- a/prob2_2025/cantor.html
+++ b/prob2_2025/cantor.html
@@ -154,11 +154,11 @@ function myFunction() {
 <li>
 <a href="#Wierd distributions">Wierd distributions</a>
 </li>
-<li>
+<li>&nbsp;&nbsp;&nbsp;
 <a href="#Neither continuous nor discrete">Neither continuous nor discrete</a>
 </li>
 <li>
-<a href="#A continuous distribution without density">A continuous distribution without density</a>
+<a href="#Cantor distribution (graphically)">Cantor distribution (graphically)</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#The sequence">The sequence</a>
@@ -166,11 +166,14 @@ function myFunction() {
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Convergence of $F_n$">Convergence of $F_n$</a>
 </li>
+<li>
+<a href="#Cantor distribution (rigorously)">Cantor distribution (rigorously)</a>
+</li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#The limit is a CDF">The limit is a CDF</a>
 </li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Properties">Properties</a>
+<li>
+<a href="#Cantor distribution (properties)">Cantor distribution (properties)</a>
 </li>
 </ul>
 <hr/>
@@ -194,8 +197,8 @@ As this diagram shows, there are distributions that are neither discrete nor con
  that do not admit a density (blue dot). We shall now take  a closer look at two such examples.
 <p></p>
 
-<h1><a
-name="Neither continuous nor discrete">Neither continuous nor discrete</a></h1>
+<h2><a
+name="Neither continuous nor discrete">Neither continuous nor discrete</a></h2>
 Such distributions abound in reality. Here is a simple example. Imagine a random light bulb with
  light span $X.$  This means if you turn it on, and never switch it off, and monitor it
  continuously to record the time when it gets fused, then that time is $X.$   Now, lifespans need to be found for lamps
@@ -232,7 +235,7 @@ Though, strictly speaking it is neither continuous nor discrete, yet, colloquall
 <p></p>
 
 <h1><a
-name="A continuous distribution without density">A continuous distribution without density</a></h1>
+name="Cantor distribution (graphically)">Cantor distribution (graphically)</a></h1>
 
 <p></p>
 The example we are going to describe is called <b><font color="red" size="40">Cantor distribution</font></b>. As it has neither a PMF nor a density, we
@@ -271,9 +274,14 @@ Here the graphs of $F_0, F_1$  and $F_2$:
 </table>
 </center>
 
+
+<p></p>
+Note that each oblique part in $F_n$  has ertical height $2^{-n}.$
 It is possible to write down an algebraic formula for $F_n.$  But it is preferable to think
  in terms of graphs to appreciate
  the following discussion.
+<p></p>
+
 <h2><a
 name="Convergence of $F_n$">Convergence of $F_n$</a></h2>
 We are going to claim that $F_n$'s converge. Indeed, they converge uniformly. This should be readily apparent if we
@@ -300,10 +308,17 @@ To move from one $F_n$  to the next we are leaving horizontal parts unchanged an
 </tr>
 </table>
 </center>
-To formally prove uniform convergence of $(F_n)$  we shall employ the uniform Cauchy criterion, <i>i.e.</i>, we shall show that
+Thus, the change from $F_n$  to any $F_m$   for $m&gt;n$  is at most $2^{-n}.$ 
+ Digest this well from the graphs, as this will form the main argument in the proof coming up in the next video.  
+<h1><a
+name="Cantor distribution (rigorously)">Cantor distribution (rigorously)</a></h1>
+Here we shall  formally prove the uniform convergence of $(F_n).$  We shall employ the uniform Cauchy
+ criterion, <i>i.e.</i>, we shall show that
 <p></p>
 
 <div class="box">Target</div>$\forall \epsilon&gt;0~~\exists N\in{\mathbb N}~~ \forall m,n\geq N~~ \forall x\in{\mathbb R}~~|F_m(x)-F_n(x)| &lt; \epsilon.$
+<p></p>
+You should know from your analysis course that this is equivalent to uniform conergence of $(F_n).$  
 <p></p>
 
 <div class="box">$\forall \epsilon$</div> Take any $\epsilon&gt;0.$
@@ -348,8 +363,8 @@ By the fundamental theorem of probability, this $F$  must be the CDF of the dist
  is this distribution that we call the <b><font color="red" size="40">Cantor distribution</font></b>. 
 <p></p>
 
-<h2><a
-name="Properties">Properties</a></h2>
+<h1><a
+name="Cantor distribution (properties)">Cantor distribution (properties)</a></h1>
 We have already seen that $F$  is continuous. Let us consider $T_n = [0,1]\setminus S_n$  for $n=0,1,2,...$ 
  This is the set of points where the graph of $F_n$  is horizontal.   Then the length of $T_n$  increases to $1.$ 
 Now, $F$  is differentiable at each point of $\cup T_n.$  and the derivtive is 0. If we set the derivative 0 everywhere
