--- a/prob2_2025/cdistrib1.html
+++ b/prob2_2025/cdistrib1.html
@@ -403,6 +403,7 @@ name="$Unif(0,1)$ to any distribution">$Unif(0,1)$ to any distribution</a></h1>
 <a href="https://youtu.be/W80bkQQyEYA">Video for this section</a>
 <p></p>
 
+<img src="image/alert.png">The video has been corrected.
 <p></p>
 We have seen how we can arrive at the  $Unif(0,1)$ from any <i>continuous</i>  distribution.
  Here we shall see its converse which is even stronger: Given $X\sim Unif(0,1)$  we can
