--- a/prob2_2025/index.html
+++ b/prob2_2025/index.html
@@ -167,7 +167,7 @@ name="Probability II (B1, 2025)">Probability II (B1, 2025)</a></h1>
 URL: https://arnabc74.github.io/prob2_2025/
 <h2><a
 name="Class notes">Class notes</a></h2>
-
+Before midsem:
 <ol type="">
 
 <li>
@@ -183,7 +183,20 @@ name="Class notes">Class notes</a></h2>
 </li>
 
 <li>
-<a href="cdistrib1.html">Some standard distributions with densities</a>
+<a href="cdistrib1.html">Some standard distributions with
+densities</a>
+</li>
+
+<li>
+<a href="cantor.html">Wierd distributions</a> (not in
+midsem syllabus)</li>
+
+</ol>
+After midsem:
+<ol type="">
+
+<li>
+<a href="cdistrib2.html">Some more standard distributions with densities</a>
 </li>
 
 <li>
