--- a/prob2_2025/index.html
+++ b/prob2_2025/index.html
@@ -204,7 +204,7 @@ After midsem:
 </li>
 
 <li>
-<a href="measure.html">Notions from measure theory</a>
+<a href="measure.html">Lebesgue integration</a>
 </li>
 
 </ol>
