--- a/prob2_2025/cdistrib1.html
+++ b/prob2_2025/cdistrib1.html
@@ -193,6 +193,9 @@ function myFunction() {
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Problem set 7">Problem set 7</a>
 </li>
+<li>
+<a href="#Problems for practice">Problems for practice</a>
+</li>
 </ul>
 <hr/>
 <title>Some standard densities</title>
@@ -296,10 +299,15 @@ Plot $f_\theta(1)$  as a function of $\theta.$</p>
 <p></p>
 
 <p>
-<b>EXERCISE 6:</b>&nbsp;Let $X\sim Unif(0,1).$  Let $a_i = \frac in$  for
- $i=0,...,n.$  Fix any permutation $\pi$  of $\{1,2,...,n\}.$  We shall
- ''scramble'' $X$  using $\pi$  to obtain $Y.$  If $Y = f(X)$, where $f(x) =
- a_{\pi(i-1)}+(x-a_i)$  if $x\in [a_{i-1},a_i).$  What is the distribution of $Y?$</p>
+<b>EXERCISE 6:</b>&nbsp;Let $X\sim Unif(0,1].$
+Define, for $k=1,...,n$,  the interval $I_k =
+ \left( \frac{k-1}{n}, \frac kn \right].$  Fix any
+ permutation $\pi$  of
+ $\{1,2,...,n\}.$  We shall
+ ''scramble'' $X$  using $\pi$  to obtain $Y.$  More precisely, we define $Y =
+ f(X)$, where for each $x\in (0,1],$  if $x\in I_k,$  then we define $f(x)$ to be the corresponding point
+ in $I_{\pi(k)}.$  
+ What is the distribution of $Y?$</p>
 
 <p></p>
 
@@ -794,6 +802,170 @@ name="Problem set 7">Problem set 7</a></h2>
 <p></p>
 ::<p>
 <b>EXERCISE 21:</b>&nbsp;<font size="-2">[rossipmjoint7.png]</font><img width="" src="image/rossipmjoint7.png" style="vertical-align:text-top;"></p>
+
+<p></p>
+
+<h1><a
+name="Problems for practice">Problems for practice</a></h1>
+::<p>
+<b>EXERCISE 22:</b>&nbsp;<font size="-2">[rossdistrib1.png]</font><img width="" src="image/rossdistrib1.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 23:</b>&nbsp;<font size="-2">[rossdistrib2.png]</font><img width="" src="image/rossdistrib2.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 24:</b>&nbsp;<font size="-2">[rossdistrib3.png]</font><img width="" src="image/rossdistrib3.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 25:</b>&nbsp;<font size="-2">[rossdistrib4.png]</font><img width="" src="image/rossdistrib4.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 26:</b>&nbsp;<font size="-2">[rossdistrib5.png]</font><img width="" src="image/rossdistrib5.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 27:</b>&nbsp;<font size="-2">[rossdistrib6.png]</font><img width="" src="image/rossdistrib6.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 28:</b>&nbsp;<font size="-2">[rossdistrib7.png]</font><img width="" src="image/rossdistrib7.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 29:</b>&nbsp;<font size="-2">[rossdistrib8.png]</font><img width="" src="image/rossdistrib8.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 30:</b>&nbsp;<font size="-2">[rossdistrib9.png]</font><img width="" src="image/rossdistrib9.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 31:</b>&nbsp;<font size="-2">[rossdistrib10.png]</font><img width="" src="image/rossdistrib10.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 32:</b>&nbsp;<font size="-2">[rossdistrib11.png]</font><img width="" src="image/rossdistrib11.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 33:</b>&nbsp;<font size="-2">[rossdistrib12.png]</font><img width="" src="image/rossdistrib12.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 34:</b>&nbsp;<font size="-2">[rossdistrib13.png]</font><img width="" src="image/rossdistrib13.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 35:</b>&nbsp;<font size="-2">[rossdistrib14.png]</font><img width="" src="image/rossdistrib14.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 36:</b>&nbsp;<font size="-2">[rossdistrib15.png]</font><img width="" src="image/rossdistrib15.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 37:</b>&nbsp;<font size="-2">[rossdistrib16.png]</font><img width="" src="image/rossdistrib16.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 38:</b>&nbsp;<font size="-2">[rossdistrib17.png]</font><img width="" src="image/rossdistrib17.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 39:</b>&nbsp;<font size="-2">[rossdistrib18.png]</font><img width="" src="image/rossdistrib18.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 40:</b>&nbsp;<font size="-2">[rossdistrib19.png]</font><img width="" src="image/rossdistrib19.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 41:</b>&nbsp;<font size="-2">[rossdistrib20.png]</font><img width="" src="image/rossdistrib20.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 42:</b>&nbsp;<font size="-2">[rossdistrib21.png]</font><img width="" src="image/rossdistrib21.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 43:</b>&nbsp;<font size="-2">[rossdistrib22.png]</font><img width="" src="image/rossdistrib22.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 44:</b>&nbsp;<font size="-2">[rossdistrib23.png]</font><img width="" src="image/rossdistrib23.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 45:</b>&nbsp;<font size="-2">[rossdistrib24.png]</font><img width="" src="image/rossdistrib24.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 46:</b>&nbsp;<font size="-2">[rossdistrib25.png]</font><img width="" src="image/rossdistrib25.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 47:</b>&nbsp;<font size="-2">[rossdistrib26.png]</font><img width="" src="image/rossdistrib26.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 48:</b>&nbsp;<font size="-2">[rossdistrib27.png]</font><img width="" src="image/rossdistrib27.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 49:</b>&nbsp;<font size="-2">[rossdistrib28.png]</font><img width="" src="image/rossdistrib28.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 50:</b>&nbsp;<font size="-2">[rossdistrib29.png]</font><img width="" src="image/rossdistrib29.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 51:</b>&nbsp;<font size="-2">[rossdistrib30.png]</font><img width="" src="image/rossdistrib30.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 52:</b>&nbsp;<font size="-2">[rossdistrib31.png]</font><img width="" src="image/rossdistrib31.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 53:</b>&nbsp;<font size="-2">[rossdistrib32.png]</font><img width="" src="image/rossdistrib32.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 54:</b>&nbsp;<font size="-2">[rossdistrib33.png]</font><img width="" src="image/rossdistrib33.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 55:</b>&nbsp;<font size="-2">[rossdistrib34.png]</font><img width="" src="image/rossdistrib34.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 56:</b>&nbsp;<font size="-2">[rossdistrib35.png]</font><img width="" src="image/rossdistrib35.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 57:</b>&nbsp;<font size="-2">[rossdistrib36.png]</font><img width="" src="image/rossdistrib36.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 58:</b>&nbsp;<font size="-2">[rossdistrib37.png]</font><img width="" src="image/rossdistrib37.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 59:</b>&nbsp;<font size="-2">[rosspdf9.png]</font><img width="" src="image/rosspdf9.png" style="vertical-align:text-top;">
+<p></p>
+Here is Example 5b that is refered above:
+<center>
+<fieldset>
+<legend><b>Example 5b</b></legend><img width="80%" src="image/rosspdf10.png"></fieldset>
+</center>
+
+</p>
+
+<p></p>
+::<p>
+<b>EXERCISE 60:</b>&nbsp;<font size="-2">[rosspdf15.png]</font><img width="" src="image/rosspdf15.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 61:</b>&nbsp;<font size="-2">[hpspdf21.png]</font><img width="" src="image/hpspdf21.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 62:</b>&nbsp;<font size="-2">[hpspdf23.png]</font><img width="" src="image/hpspdf23.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 63:</b>&nbsp;<font size="-2">[hpspdf25.png]</font><img width="" src="image/hpspdf25.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 64:</b>&nbsp;<font size="-2">[hpspdf27.png]</font><img width="" src="image/hpspdf27.png" style="vertical-align:text-top;"></p>
+---
+::<p>
+<b>EXERCISE 65:</b>&nbsp;<font size="-2">[hpspdf28.png]</font><img width="" src="image/hpspdf28.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 66:</b>&nbsp;<font size="-2">[hpspdf29.png]</font><img width="" src="image/hpspdf29.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 67:</b>&nbsp;<font size="-2">[hpspdf30.png]</font><img width="" src="image/hpspdf30.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 68:</b>&nbsp;<font size="-2">[hpspdf31.png]</font><img width="" src="image/hpspdf31.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 69:</b>&nbsp;<font size="-2">[hpspdf32.png]</font><img width="" src="image/hpspdf32.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 70:</b>&nbsp;<font size="-2">[hpspdf33.png]</font><img width="" src="image/hpspdf33.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 71:</b>&nbsp;<font size="-2">[hpspdf34.png]</font><img width="" src="image/hpspdf34.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 72:</b>&nbsp;<font size="-2">[hpspdf35.png]</font><img width="" src="image/hpspdf35.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 73:</b>&nbsp;<font size="-2">[hpspdf36.png]</font><img width="" src="image/hpspdf36.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 74:</b>&nbsp;<font size="-2">[hpspdf37.png]</font><img width="" src="image/hpspdf37.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 75:</b>&nbsp;<font size="-2">[hpspdf38.png]</font><img width="" src="image/hpspdf38.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 76:</b>&nbsp;<font size="-2">[hpspdf39.png]</font><img width="" src="image/hpspdf39.png" style="vertical-align:text-top;"></p>
+---
+::<p>
+<b>EXERCISE 77:</b>&nbsp;<font size="-2">[hpspdf41.png]</font><img width="" src="image/hpspdf41.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 78:</b>&nbsp;<font size="-2">[hpspdf42.png]</font><img width="" src="image/hpspdf42.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 79:</b>&nbsp;<font size="-2">[hpspdf43.png]</font><img width="" src="image/hpspdf43.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 80:</b>&nbsp;<font size="-2">[hpspdf44.png]</font><img width="" src="image/hpspdf44.png" style="vertical-align:text-top;"></p>
+----
+::<p>
+<b>EXERCISE 81:</b>&nbsp;<font size="-2">[hpstrans3.png]</font><img width="" src="image/hpstrans3.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 82:</b>&nbsp;<font size="-2">[hpstrans6.png]</font><img width="" src="image/hpstrans6.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 83:</b>&nbsp;<font size="-2">[hpstrans10.png]</font><img width="" src="image/hpstrans10.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 84:</b>&nbsp;<font size="-2">[hpstrans11.png]</font><img width="" src="image/hpstrans11.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 85:</b>&nbsp;<font size="-2">[hpstrans13.png]</font><img width="" src="image/hpstrans13.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 86:</b>&nbsp;<font size="-2">[hpstrans15.png]</font><img width="" src="image/hpstrans15.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 87:</b>&nbsp;<font size="-2">[hpstrans16.png]</font><img width="" src="image/hpstrans16.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 88:</b>&nbsp;<font size="-2">[hpstrans17.png]</font><img width="" src="image/hpstrans17.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 89:</b>&nbsp;<font size="-2">[hpstrans18.png]</font><img width="" src="image/hpstrans18.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 90:</b>&nbsp;<font size="-2">[hpstrans20.png]</font><img width="" src="image/hpstrans20.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 91:</b>&nbsp;<font size="-2">[hpstrans22.png]</font><img width="" src="image/hpstrans22.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 92:</b>&nbsp;<font size="-2">[hpstrans25.png]</font><img width="" src="image/hpstrans25.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 93:</b>&nbsp;<font size="-2">[hpstrans26.png]</font><img width="" src="image/hpstrans26.png" style="vertical-align:text-top;"></p>
+
+<p></p>
 <hr/>
 <table width="100%" border="0">
 <tr>
