--- a/prob2_2025/cdistrib1.html
+++ b/prob2_2025/cdistrib1.html
@@ -330,8 +330,18 @@ Let $Y=F(X).$  Shall show that it has the CDF of $Unif(0,1)$  distribution:
 $$P(Y\leq y) = \left\{\begin{array}{ll}0&\text{if }y&lt;0\\ y&\text{if }0\leq y &lt; 1\\ 1&\text{if }1 \leq y\\\end{array}\right.$$
 This will complete the proof, since $CDF$  uniquely determines a distribution. 
 <p></p>
-We know that $F:{\mathbb R}\rightarrow[0,1].$  So $Y = F(X)\in[0,1].$  Hence $G(y) = 0$  if $y \leq 0$  and $G(y)=1$ 
- if $y\geq 1.$
+We know that $F:{\mathbb R}\rightarrow[0,1].$  So $Y = F(X)\in[0,1].$  Hence $G(y) = 0$  if $y &lt; 0$  and $G(y)=1$ 
+ if $y\geq 1.$  Also $G(0) = 0.$
+<blockquote><a
+href="javascript:hideShow('reason1')"><b>[Because...]</b></a><div
+class="ans" id="reason1">
+$G(0) = P(Y\leq 0) = P(F(X)\leq 0) = P(X\leq a)$ , where $a = \sup\{x~:~F(x)=0\}.$  
+<p></p>
+Then $F(a-) = 0.$  By continuity of $F,$  we have $F(a)=0.$
+<p></p>
+So $P(X\leq 0) = 0.$  Hence $G(0)=0.$
+</div></blockquote>
+
 <p></p>
 Take any $y\in(0,1).$
 What we plan to do now is best understood with a diagram:
@@ -349,8 +359,8 @@ This $b$  will be useful, because $\{F(x)\leq y\}= \{x\leq b\}.$
 <p></p>
 We shall obtain $b$  as the supremum of the set $A = \{x~:~F(x)\leq y\}.$  Then $A$ is non-empty and bounded above.
 <blockquote><a
-href="javascript:hideShow('reason1')"><b>[Because...]</b></a><div
-class="ans" id="reason1"> Non-empty: $\because \lim_{x\rightarrow -\infty} F(x) = 0$  and $y&gt;0,$  $\therefore \exists t\in{\mathbb R} ~~F(t) &lt; y.$
+href="javascript:hideShow('reason2')"><b>[Because...]</b></a><div
+class="ans" id="reason2"> Non-empty: $\because \lim_{x\rightarrow -\infty} F(x) = 0$  and $y&gt;0,$  $\therefore \exists t\in{\mathbb R} ~~F(t) &lt; y.$
 <p></p>
 Bounded above:  $\because\lim_{x\rightarrow \infty} F(x) = 1$,
  and $y &lt; 1,$  hence $\exists s\in{\mathbb R} ~~F(s) &gt; y.$  
@@ -364,8 +374,8 @@ Let $b = \sup(A).$
 By continuity of $F,$  we have $F(b) = y.$  (Use the argument you used to prove intermediate value theorem
  in you Analysis 1 course.)
 <blockquote><a
-href="javascript:hideShow('reason2')"><b>[Because...]</b></a><div
-class="ans" id="reason2">If $F(b) &lt; y$  then no value in $(F(b),y)$  can be taken by $F$, which is
+href="javascript:hideShow('reason3')"><b>[Because...]</b></a><div
+class="ans" id="reason3">If $F(b) &lt; y$  then no value in $(F(b),y)$  can be taken by $F$, which is
 impossible since $F$  is continuous.
 <p></p>
 If $F(b) &gt; y$, then consider any $t\in (y,F(b)).$  We shall have some $r\in{\mathbb R}~~F(r)=t.$  Then $r &lt; b$ 
