--- a/prob2_2025/cdistrib1.html
+++ b/prob2_2025/cdistrib1.html
@@ -335,7 +335,11 @@ We know that $F:{\mathbb R}\rightarrow[0,1].$  So $Y = F(X)\in[0,1].$  Hence $G(
 <blockquote><a
 href="javascript:hideShow('reason1')"><b>[Because...]</b></a><div
 class="ans" id="reason1">
-$G(0) = P(Y\leq 0) = P(F(X)\leq 0) = P(X\leq a)$ , where $a = \sup\{x~:~F(x)=0\}.$  
+If $F(x)$  never attains the value 0, then clearly $G(0)=0.$  
+<p></p>
+Otherwise, $G(0) = P(Y\leq 0) = P(F(X)\leq 0) =
+ P(X\leq a)$ , where $a =
+ \sup\{x~:~F(x)=0\}.$  
 <p></p>
 Then $F(a-) = 0.$  By continuity of $F,$  we have $F(a)=0.$
 <p></p>
