--- a/prob2_2025/cdistrib1.html
+++ b/prob2_2025/cdistrib1.html
@@ -213,7 +213,7 @@ Notice that a PDF must be defined over entire ${\mathbb R}.$  Hence we need the 
  replaced by $a\leq x &lt; b$  or $a\leq x \leq b$  or $a&lt; x \leq b$  without any change in meaning. 
 <p></p>
 The CDF is 
-$$F(x) = \left\{\begin{array}{ll}0&\text{if }x &lt; a\\ \frac{x-a}{b-a}&\text{if }a\geq x &lt; b\\ 1&\text{if }b\geq x\\\end{array}\right..$$
+$$F(x) = \left\{\begin{array}{ll}0&\text{if }x &lt; a\\ \frac{x-a}{b-a}&\text{if }a\leq x &lt; b\\ 1&\text{if }b\leq x\\\end{array}\right..$$
 Of a great importance is the special case $Unif(0,1)$, whose $CDF$  you must never forget:
 <center>
 <table width="100%">
