--- a/prob2_2025/trans.html
+++ b/prob2_2025/trans.html
@@ -1166,7 +1166,13 @@ name="Miscellaneous problems">Miscellaneous problems</a></h1>
 ::<p>
 <b>EXERCISE 41:</b>&nbsp;<font size="-2">[hpstrans4.png]</font><img width="" src="image/hpstrans4.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 42:</b>&nbsp;<font size="-2">[hpstrans7.png]</font><img width="" src="image/hpstrans7.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 42:</b>&nbsp;<font size="-2">[hpstrans7.png]</font><img width="" src="image/hpstrans7.png" style="vertical-align:text-top;">
+<center>
+<fieldset>
+<legend><b>Here is Exercise 8:</b></legend><img width="80%" src="image/hpsref8.png"></fieldset>
+</center> 
+
+</p>
 ::<p>
 <b>EXERCISE 43:</b>&nbsp;<font size="-2">[hpstrans8.png]</font><img width="" src="image/hpstrans8.png" style="vertical-align:text-top;"></p>
 ::<p>
@@ -1174,17 +1180,35 @@ name="Miscellaneous problems">Miscellaneous problems</a></h1>
 ::<p>
 <b>EXERCISE 45:</b>&nbsp;<font size="-2">[hpstrans12.png]</font><img width="" src="image/hpstrans12.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 46:</b>&nbsp;<font size="-2">[hpstrans14.png]</font><img width="" src="image/hpstrans14.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 46:</b>&nbsp;<font size="-2">[hpstrans14.png]</font><img width="" src="image/hpstrans14.png" style="vertical-align:text-top;">
+<center>
+<fieldset>
+<legend><b>Here is Exercise 19:</b></legend><img width="80%" src="image/hpsref19.png"></fieldset>
+</center> 
+
+</p>
 ::<p>
 <b>EXERCISE 47:</b>&nbsp;<font size="-2">[hpstrans21.png]</font><img width="" src="image/hpstrans21.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 48:</b>&nbsp;<font size="-2">[hpstrans23.png]</font><img width="" src="image/hpstrans23.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 48:</b>&nbsp;<font size="-2">[hpstrans23.png]</font><img width="" src="image/hpstrans23.png" style="vertical-align:text-top;">
+<center>
+<fieldset>
+<legend><b>Here is Exercise 38:</b></legend><img width="80%" src="image/hpsrefs1.png"></fieldset>
+</center> 
+
+</p>
 ::<p>
 <b>EXERCISE 49:</b>&nbsp;<font size="-2">[hpstrans24.png]</font><img width="" src="image/hpstrans24.png" style="vertical-align:text-top;"></p>
 ::<p>
 <b>EXERCISE 50:</b>&nbsp;<font size="-2">[hpspdf7.png]</font><img width="" src="image/hpspdf7.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 51:</b>&nbsp;<font size="-2">[hpspdf11.png]</font><img width="" src="image/hpspdf11.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 51:</b>&nbsp;<font size="-2">[hpspdf11.png]</font><img width="" src="image/hpspdf11.png" style="vertical-align:text-top;">
+<center>
+<fieldset>
+<legend><b>Here is Exercise 4:</b></legend><img width="80%" src="image/hpsrefs2.png"></fieldset>
+</center> 
+
+</p>
 
 <p></p>
 ::<p>
@@ -1215,7 +1239,12 @@ name="Miscellaneous problems">Miscellaneous problems</a></h1>
 <p></p>
 ::<p>
 <b>EXERCISE 62:</b>&nbsp;<font size="-2">[rosspdf23.png]</font><img width="" src="image/rosspdf23.png" style="vertical-align:text-top;">
-Which is Theo Exr 2??</p>
+<center>
+<fieldset>
+<legend><b>Here is Theoretical Exercise 2:</b></legend><img width="80%" src="image/rossrefs1.png"></fieldset>
+</center> 
+
+</p>
 ::<p>
 <b>EXERCISE 63:</b>&nbsp;<font size="-2">[rosspdf24.png]</font><img width="" src="image/rosspdf24.png" style="vertical-align:text-top;"></p>
 ::<p>
