--- a/prob2_2025/cdistrib1.html
+++ b/prob2_2025/cdistrib1.html
@@ -590,7 +590,8 @@ Similarly, one may show that $Expo(\lambda)$  is the only memoryless distributio
 name="Problem set 5">Problem set 5</a></h2>
 
 <p>
-<b>EXERCISE 14:</b>&nbsp;
+<b>EXERCISE 14:</b>&nbsp;Consider the $Geom(\theta)$  distribution supported on $\{0,1,2,3,...\}.$  It is the number of tails you get
+ before the first head in an IID sequence of tosses of a coin with $P(head)=\theta.$  
 Show that if $X\sim Expo(\lambda)$  then $\lceil X\rceil\sim(Geom(\theta).$   Express $\theta$  in terms of
  $\lambda.$
 </p>
@@ -599,14 +600,6 @@ Show that if $X\sim Expo(\lambda)$  then $\lceil X\rceil\sim(Geom(\theta).$   Ex
 
 <p>
 <b>EXERCISE 15:</b>&nbsp;
-If the definition of memorylessness is changed from 
-<blockquote>
-''For $a,b\geq 0~~$$P(X\geq a+b|X\geq a)$  is free of $a$''
-</blockquote>
-to 
-<blockquote>
-''For $a,b\geq 0~~$$P(X&gt; a+b|X&gt; a)$  is free of $a$''
-</blockquote>
 then the only discrete memoryless distribution is $Geom(\theta)$  distribution supported on $\{0\}\cup{\mathbb N}$  (counting
  number of failures before the first success). Show that this geometric is the distribution of $\lfloor X\rfloor$  for
  $X\sim Expo(\lambda).$
