--- a/prob2_2025/cdistrib1.html
+++ b/prob2_2025/cdistrib1.html
@@ -672,7 +672,7 @@ Some typical gamma densities  are shown  below.
 <th><img width="" src="image/gammadens1.png"></th>
 </tr>
 <tr>
-<th>All these have $p=1.$  Note how $a$  controls the position of the ''knee''</th>
+<th>All these have $p=1.$  Note how $a$  controls the overall shape</th>
 </tr>
 </table>
 </center>
@@ -683,7 +683,7 @@ Some typical gamma densities  are shown  below.
 <th><img width="" src="image/gammadens2.png"></th>
 </tr>
 <tr>
-<th>All these have $p=2.$  Again, $a$  controls the position of the ''knee''</th>
+<th>All these have $p=2.$  Again, $a$  controls the overall shape</th>
 </tr>
 </table>
 </center>
@@ -694,7 +694,7 @@ Some typical gamma densities  are shown  below.
 <th><img width="" src="image/gammadens3.png"></th>
 </tr>
 <tr>
-<th>All these have $p=0.5.$  Here also $a$  controls the position of the ''knee''</th>
+<th>All these have $p=0.5.$  Here also $a$  controls the overall shape</th>
 </tr>
 </table>
 </center>
