--- a/prob2_2025/cdistrib2.html
+++ b/prob2_2025/cdistrib2.html
@@ -404,9 +404,9 @@ $\Gamma\left(\frac 12\right)= \sqrt\pi.$
 </p>
 To use this result in order to show that the total integral of the $N(\mu,\sigma^2)$  density is indeed 1, we proceed
  as follows.
-$$\int_0^\infty e^{-x^2/2}\, dx= \frac{1}{\sqrt2}\int_0^\infty t^{-1/2} e^-t \, dt$$
+$$\int_0^\infty e^{-x^2/2}\, dx= \frac{1}{\sqrt2}\int_0^\infty t^{-1/2} e^{-t} \, dt$$
 by using $t = x^2/2.$  This new integral is just 
-$$\int_0^\infty t^{\frac 12-1} e^-t \, dt = \Gamma\left(\frac 12\right) = \sqrt\pi.$$
+$$\int_0^\infty t^{\frac 12-1} e^{-t} \, dt = \Gamma\left(\frac 12\right) = \sqrt\pi.$$
 So
 $$\int_{-\infty}^\infty e^{-x^2/2}\, dx=2\int_0^\infty e^{-x^2/2}\, dx= \sqrt{2\pi}.$$
 Hence we have shown that the $N(0,1)$  density integrates up to 1. To prove for any general $N(\mu,\sigma^2)$ 
