--- a/prob2_2025/cdistrib2.html
+++ b/prob2_2025/cdistrib2.html
@@ -201,6 +201,8 @@ function myFunction() {
 
 <h1><a
 name="Beta function">Beta function</a></h1>
+<a href="https://youtu.be/0PoToYKWusE">Video for this section</a>
+<p></p>
 The next distribution that we shall discuss is the Beta distribution. Just as we needed to know about the Gamma function
  in order to talk about the Gamma distribution, we need to know about the Beta function before we can get into Beta distribution.
 <p></p>
@@ -243,6 +245,8 @@ name="Problem set 1">Problem set 1</a></h2>
 
 <h1><a
 name="Beta distribution">Beta distribution</a></h1>
+<a href="https://youtu.be/8U3mGT60ZJQ">Video for this section</a>
+<p></p>
 Now that we see that for $a,b&gt;0$  the function $x^{a-1}(1-x)^{b-1}$  is  nonnegative and integrable 
 over  $(0,1)$  with integral $B(a,b),$ 
  we can immediately manufacture a density out of it:
@@ -318,6 +322,8 @@ Answer by thinking about the density. Now prove it mathematically.
 
 <h1><a
 name="Bayesian machine learning">Bayesian machine learning</a></h1>
+<a href="https://youtu.be/u2KcYDA1yFs">Video for this section</a>
+<p></p>
 The main use of the beta distribution in statistics is as a "distribution of probability". To
  understand this, consider the large collection of coins, both biased and unbiased. If you pick
  one of them at random and let $\Pi$  denote its $P(head),$  then $\Pi$  is a
